--- a/01 - DOM-manipulation/css/style.css
+++ b/01 - DOM-manipulation/css/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: rgb(200, 177, 147);
+    background-color: rgb(230, 221, 141);
     font-size: large;
 }
-.style1{
-    background-color: red;
+.styleEx4{
+    background-color: rgb(236, 128, 128);
 }
-.style2{
+.Style2Ex4{
     background-color: black;
     color: white;
 }
